#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([ExtUnitTest], [0.1])
# init automake
AM_INIT_AUTOMAKE([-Wall])
AC_CONFIG_SRCDIR([include/Test.h])
AC_CONFIG_HEADERS([config.h])
# libtool
AC_PROG_LIBTOOL

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC
# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.
AC_CONFIG_FILES([Makefile src/Makefile])

AC_OUTPUT
