include $(top_srcdir)/common.am

#libtools target
lib_LTLIBRARIES = libextunittest.la


libextunittest_la_SOURCES = \
App.cpp\
BaseTestObserver.cpp\
BaseTestRunner.cpp\
Composite.cpp\
ConsoleTestLogger.cpp\
ListTestRunner.cpp\
MultiThreadTestRunner.cpp\
RootTestSuite.cpp\
SqlTestLogger.cpp\
TestBody.cpp\
TestCase.cpp\
TestResource.cpp\
TestResult.cpp\
TestStatus.cpp\
TestSuite.cpp

nobase_include_HEADERS =\
App.h\
BaseTestObserver.h\
BaseTestRunner.h\
Cloneable.hpp\
Composite.hpp\
ConsoleTestLogger.h\
ListTestRunner.h\
MultiThreadTestRunner.h\
Observer.hpp\
RootTestSuite.h\
Singleton.hpp\
SqlTestLogger.h\
TestBody.h\
TestCase.h\
TestException.h\
TestResource.h\
TestResult.h\
TestStatus.h\
TestSuite.h\
Visitor.hpp

# flags
# libextunittest_la_LDFLAGS =  -l boost_program_options
# libextunittest_la_LIBADD =
